Finished responsive changes

--- a/src/components/styles/redtag.css
+++ b/src/components/styles/redtag.css
@@ -8,9 +8,17 @@
   font-weight: bold;
   padding: 10px 20px;
   z-index: 10;
-  width: 500px;
+  width: 90%; /* Ajusta el ancho para que sea relativo al tamaño de la pantalla */
+  max-width: 300px; /* Máximo ancho para pantallas grandes */
   text-align: center;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-  font-size: 28px;
+  font-size: 20px; /* Tamaño de fuente adaptable */
   opacity: 60%;
+}
+
+@media (min-width: 768px) {
+  .ribbon {
+    max-width: 500px; /* Ancho original solo para pantallas grandes */
+    font-size: 28px; /* Tamaño de texto más grande en pantallas grandes */
+  }
 }
