--- a/src/components/styles/redtag.css
+++ b/src/components/styles/redtag.css
@@ -18,7 +18,7 @@
 
 @media (min-width: 768px) {
   .ribbon {
-    max-width: 500px; /* Ancho original solo para pantallas grandes */
-    font-size: 28px; /* Tamaño de texto más grande en pantallas grandes */
+    max-width: 500px;
+    font-size: 28px;
   }
 }
