--- a/src/components/styles/redtag.css
+++ b/src/components/styles/redtag.css
@@ -12,7 +12,7 @@
   max-width: 300px;
   text-align: center;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-  font-size: 20px;
+  font-size: 10px;
   opacity: 60%;
 }
 
@@ -20,5 +20,12 @@
   .ribbon {
     max-width: 500px;
     font-size: 28px;
+  }
+}
+
+@media (min-width: 325px) {
+  .ribbon {
+    max-width: 300px;
+    font-size: 20px;
   }
 }
